Fix: Z-Index Sign In Modal Bug

--- a/src/components/Navigation/SignInModal/SignInModal.scss
+++ b/src/components/Navigation/SignInModal/SignInModal.scss
@@ -17,6 +17,7 @@
   position: absolute;
   top: 52px;
   right: 60px;
+  z-index: 2;
   border: 1px solid #bbbbbb;
   border-radius: 3px;
   background-color: #ffffff;
