--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -27,7 +27,7 @@
   position: absolute;
   top: 100px;
   left: 0;
-  z-index: -1;
+  z-index: 2;
   opacity: 0;
   background-color: #000000;
   animation: sign-in-modal-mouseover 0.2s forwards;
