--- a/src/views/WishList/WishList.scss
+++ b/src/views/WishList/WishList.scss
@@ -46,6 +46,19 @@
         color: #ffffff;
         font-size: 40px;
       }
+
+      .wish-list-sign-in {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 10px 11px 0 11px;
+        font-size: $font-size-13px;
+        border-radius: 7px;
+        border: none;
+        background-color: $primary-button-color;
+        cursor: pointer;
+      }
     }
   }
 }
